# Poetry-Project

./: README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yml
_sources/: index.rst.txt
docs/: conf.py
poetry_project/: all_the_same.py  rectangle_perimeter.py  sun_angle.py
tests/: test_all_the_same.py  test_rectangle_perimeter.py  test_sun_angle.py
