[tool.poetry]
name = "poetry-project"
version = "0.1.0"
description = ""
authors = ["François Roussel <francois.roussel2.etu@univ-lille.fr>"]
readme = "README.md"
packages = [{include = "poetry_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"
coverage = "^7.3.2"
pylint = "^3.0.1"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
